# Tamagotchi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/tamagotchi/: __init__.py  cli.py  config.py  data_manager.py  llm.py
src/tamagotchi/agent/: core.py  prompts.py  tools.py
src/tamagotchi/api/: routes.py  schemas.py  server.py
src/tamagotchi/growth/: display.py  personality.py  state.py
src/tamagotchi/integrations/: calendar.py  content.py  shopping.py  tasks.py  web.py
src/tamagotchi/learning/: extractor.py  feedback.py  patterns.py
src/tamagotchi/memory/: episodic.py  profile.py  semantic.py  store.py
tests/unit/: test_config.py  test_growth.py  test_integrations.py  test_llm.py  test_memory.py  test_patterns.py  test_personality.py  test_semantic.py
web/: index.html
